--- a/control
+++ b/control
@@ -1,10 +1,10 @@
 Package: com.tomaszpoliszuk.applibrarycontroller
 Depends: firmware (>= 14.0), mobilesubstrate, preferenceloader
-Replaces: com.tomaszpoliszuk.applibrarydisabler
-Provides: com.tomaszpoliszuk.applibrarydisabler
-Conflicts: com.tomaszpoliszuk.applibrarydisabler
+Replaces: com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
+Provides: com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
+Conflicts: com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
 Name: App Library Controller
-Version: 1.3
+Version: 1.3.1
 Architecture: iphoneos-arm
 Description: Control App Library
 Homepage: http://moreinfo.thebigboss.org/moreinfo/depiction.php?file=applibrarycontrollerDp
