--- a/control
+++ b/control
@@ -1,10 +1,10 @@
 Package: com.tomaszpoliszuk.applibrarycontroller
 Depends: firmware (>= 14.0), mobilesubstrate, preferenceloader
-Replaces: com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
-Provides: com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
-Conflicts: com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
+Replaces: com.tomaszpoliszuk.applibraryenabler, com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
+Provides: com.tomaszpoliszuk.applibraryenabler, com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
+Conflicts: com.tomaszpoliszuk.applibraryenabler, com.tomaszpoliszuk.applibrarydisabler, com.tomaszpoliszuk.activatorlistenersforapplibrary
 Name: App Library Controller
-Version: 1.3.2
+Version: 1.4
 Architecture: iphoneos-arm
 Description: Control App Library
 Homepage: http://moreinfo.thebigboss.org/moreinfo/depiction.php?file=applibrarycontrollerDp
